--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^4.33.0",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
+    "envfile": "^6.17.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -32,6 +33,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
+    "fs": "^0.0.1-security",
     "hardhat": "^2.8.2",
     "hardhat-gas-reporter": "^1.0.7",
     "prettier": "^2.5.1",
@@ -40,7 +42,8 @@
     "solidity-coverage": "^0.7.18",
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "utils": "^0.3.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
